# Freshet

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
agent-docs/: README.md  agent-teams-reference.md  freshet-playbooks.md  subagents-reference.md  team-prompt-template.md
docs/: DEBUGGING.md  NIGHT-SUMMARY.md  product-vision.md  rust-primer.md
docs/superpowers/plans/: 2026-06-12-freshet-v1.md  2026-06-13-freshet-frontend.md  2026-06-14-conversational-stream-creation.md  2026-06-14-freshet-backend.md
docs/superpowers/specs/: 2026-06-12-freshet-v1-design.md  (+3 more)
src/: App.css  App.test.tsx  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  model.rs  scheduler.rs
src-tauri/src/agent/: claude.rs  codex.rs  discovery.rs  fake.rs  mod.rs
src-tauri/src/engine/: mod.rs  reconcile.rs
src-tauri/src/sources/: github.rs  hackernews.rs  mod.rs  polymarket.rs  reddit.rs
src-tauri/src/store/: document.rs  history.rs  mod.rs
src-tauri/tests/fixtures/: github.json  hackernews.json  polymarket.json  reddit.json
src/bridge/: Bridge.ts  BridgeProvider.test.tsx  BridgeProvider.tsx  MockBridge.test.ts  MockBridge.ts  TauriBridge.ts  sampleData.ts  types.test.ts  types.ts
src/components/: AgentNotice.css  AgentNotice.test.tsx  AgentNotice.tsx  AgentStatusChip.css  AgentStatusChip.test.tsx  AgentStatusChip.tsx
src/lib/: parseDoc.test.ts  parseDoc.ts
src/styles/: base.css  tokens.css
src/theme/: useTheme.test.ts  useTheme.ts
src/views/Desk/: Desk.css  (+3 more)
(+29 files in other folders)
