[package]
name = "freshet-tmp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freshet_tmp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "freshet_cli"
path = "src/bin/freshet_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
thiserror = "2.0.18"
tempfile = "3.27.0"
chrono = "0.4.45"
sha2 = "0.11.0"
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "process"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }

